mcu_50_programs/stm/.metadata/.plugins/org.eclipse.cdt.ui/uart4_rx_tx.build.log
13:14:55 **** Incremental Build of configuration Debug for project uart4_rx_tx ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:1:1: error: stray '\' in program
    1 | \#include "stm32f4xx.h"
      | ^
../Core/Src/main.c:1:2: error: stray '#' in program
    1 | \#include "stm32f4xx.h"
      |  ^
../Core/Src/main.c:1:11: error: expected '=', ',', ';', 'asm' or '__attribute__' before string constant
    1 | \#include "stm32f4xx.h"
      |           ^~~~~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:9:1: warning: implicit declaration of function 'UART4_init'; did you mean 'UART4_write'? [-Wimplicit-function-declaration]
    9 | UART4_init();
      | ^~~~~~~~~~
      | UART4_write
../Core/Src/main.c: At top level:
../Core/Src/main.c:16:6: warning: conflicting types for 'UART4_init'; have 'void(void)'
   16 | void UART4_init(void)
      |      ^~~~~~~~~~
../Core/Src/main.c:9:1: note: previous implicit declaration of 'UART4_init' with type 'void(void)'
    9 | UART4_init();
      | ^~~~~~~~~~
../Core/Src/main.c: In function 'UART4_init':
../Core/Src/main.c:18:1: error: 'RCC' undeclared (first use in this function)
   18 | RCC->AHB1ENR |= 1; /* Enable GPIOA clock */
      | ^~~
../Core/Src/main.c:18:1: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:21:1: error: 'GPIOA' undeclared (first use in this function)
   21 | GPIOA->AFR[0] &= ~0x00FF;
      | ^~~~~
../Core/Src/main.c:25:1: error: 'UART4' undeclared (first use in this function)
   25 | UART4->BRR = 0x0683; /* 9600 baud @ 16 MHz */
      | ^~~~~
../Core/Src/main.c: In function 'UART4_write':
../Core/Src/main.c:36:10: error: 'UART4' undeclared (first use in this function)
   36 | while (!(UART4->SR & 0x0080)) {} // wait until Tx buffer emptyUART4->DR = (ch & 0xFF);
      |          ^~~~~
../Core/Src/main.c: In function 'UART4_read':
../Core/Src/main.c:40:10: error: 'UART4' undeclared (first use in this function)
   40 | while (!(UART4->SR & 0x0020)) {} // wait until char arrives
      |          ^~~~~
../Core/Src/main.c:42:1: warning: control reaches end of non-void function [-Wreturn-type]
   42 | }
      | ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

13:14:55 Build Failed. 9 errors, 3 warnings. (took 222ms)

